k8s/backend-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-deployment
  labels:
    component: back-end
spec:
  replicas: 3
  selector:
    matchLabels:
      component: back-end
  template:
    metadata:
      labels:
        component: back-end
    spec:
      containers:
        - name: back-end
          image: michiko/backend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  selector:
    component: back-end
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
