k8s/backend-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-end-ingress
spec:
  rules:
    - host: "api.michiko.praise.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-end-service
                port:
                  number: 8080
